feat(Customer): add methods index, store, update
