# routes/api.php
@@ -5,6 +5,8 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
 use App\Http\Controllers\Api\AuthController;
+use App\Http\Controllers\Api\CustomerController;
+use App\Http\Controllers\Api\RoleController;
 use App\Http\Controllers\Api\UserController;
 
 /*
@@ -21,10 +23,16 @@ use App\Http\Controllers\Api\UserController;
 
 Route::post('/login', [AuthController::class, 'login']);
 Route::post('/logout', [AuthController::class, 'logout'])->middleware('auth:sanctum');
-Route::get('/users', [UserController::class, 'index']);
+
+Route::apiResource('users', UserController::class)->only(['index']);
+
+Route::apiResource('roles', RoleController::class)->only(['index']);
+
+Route::apiResource('customers', CustomerController::class)->only(['index', 'store', 'update']);
 
 Route::middleware('auth:sanctum')->group(function (){
     Route::get('/user', function (Request $request) {
         return $request->user();
     });
+
 });
